fixed checkboxes and counters

--- a/index.html
+++ b/index.html
@@ -164,7 +164,12 @@
                   </div>
                   <div class="orderItem__price">
                     <div class="orderItem__priceWrapper">
-                      <div class="orderItem__priceWrapperCash">522</div>
+                      <div
+                        class="orderItem__priceWrapperCash"
+                        data-initialPrice="522"
+                      >
+                        522
+                      </div>
                       <div class="orderItem__priceWrapperCurrency">сом</div>
                     </div>
                     <div class="orderItem__priceDiscount">
@@ -279,7 +284,12 @@
                   </div>
                   <div class="orderItem__price">
                     <div class="orderItem__priceWrapper">
-                      <div class="orderItem__priceWrapperCash">2 100 047</div>
+                      <div
+                        class="orderItem__priceWrapperCash"
+                        data-initialPrice="10500"
+                      >
+                        2100000
+                      </div>
                       <div class="orderItem__priceWrapperCurrency">сом</div>
                     </div>
                     <div class="orderItem__priceDiscount tooltip__container">
@@ -388,7 +398,12 @@
                   </div>
                   <div class="orderItem__price">
                     <div class="orderItem__priceWrapper">
-                      <div class="orderItem__priceWrapperCash">494</div>
+                      <div
+                        class="orderItem__priceWrapperCash"
+                        data-initialPrice="494"
+                      >
+                        494
+                      </div>
                       <div class="orderItem__priceWrapperCurrency">сом</div>
                     </div>
                     <div class="orderItem__priceDiscount">
@@ -777,8 +792,9 @@
                 <div class="total__title">
                   <p>Итого</p>
                 </div>
-                <div class="total__title" id="totalPrice">
-                  <p>2 101 063 сом</p>
+                <div class="total__title">
+                  <span id="totalPrice">0</span>
+                  <span>сом</span>
                 </div>
               </div>
               <div class="total__products">
@@ -900,5 +916,4 @@
   <script src="favorite.js"></script>
   <script src="counter.js"></script>
   <script src="modalPay.js"></script>
-  <script src="priceCounter.js"></script>
 </html>
