--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="header__inputWrapper">
             <input class="header__input" type="text" placeholder="Я ищу..." />
             <img
-              src="/Assets/icons/search.svg"
+              src="./Assets/icons/search.svg"
               alt="Search Icon"
               class="header__searchIcon"
             />
@@ -49,14 +49,14 @@
           <div class="header__buttons">
             <button class="header__profileBtn">
               <div class="header__profileIcon">
-                <img src="/Assets/icons/profile.svg" />
+                <img src="./Assets/icons/profile.svg" />
               </div>
               <span>Профиль</span>
             </button>
             <button class="header__cartBtn">
               <div class="header__notification">3</div>
               <div class="header__cartIcon">
-                <img src="/Assets/icons/cart.svg" />
+                <img src="./Assets/icons/cart.svg" />
               </div>
               <span>Корзина</span>
             </button>
@@ -79,7 +79,7 @@
               </div>
               <p class="accordion--close">266 товаров · 2 100 569 сом</p>
               <button class="choose__wrapperIcon">
-                <img src="/Assets/icons/icon-20.svg" />
+                <img src="./Assets/icons/icon-20.svg" />
               </button>
             </div>
             <div class="cart__infoLine"></div>
@@ -92,7 +92,7 @@
                       <label for="checkbox1"></label>
                     </div>
                     <div class="cartItem__image">
-                      <img src="/Assets/icons/Frame 3853.png" />
+                      <img src="./Assets/icons/Frame 3853.png" />
                     </div>
                     <div class="cartItem__overview">
                       <p class="overview__title">Футболка UZcotton мужская</p>
@@ -112,7 +112,7 @@
                           <p>OOO Вайлдберриз</p>
                         </div>
                         <div class="overview__wrapperLegalIcon">
-                          <img src="/Assets/icons/i.svg" />
+                          <img src="./Assets/icons/i.svg" />
                         </div>
                       </div>
                     </div>
@@ -203,7 +203,7 @@
                       <label for="checkbox2"></label>
                     </div>
                     <div class="cartItem__image">
-                      <img src="/Assets/icons/Чехол.png" />
+                      <img src="./Assets/icons/Чехол.png" />
                     </div>
                     <div class="cartItem__overview">
                       <p class="overview__title">
@@ -228,7 +228,7 @@
                           class="overview__wrapperLegalIcon tooltip__containerLegal"
                         >
                           <img
-                            src="/Assets/icons/i.svg"
+                            src="./Assets/icons/i.svg"
                             class="tooltip__icon"
                           />
                           <div class="tooltip__legal">
@@ -332,7 +332,7 @@
                       <label for="checkbox3"></label>
                     </div>
                     <div class="cartItem__image">
-                      <img src="/Assets/icons/Карандаш.png" />
+                      <img src="./Assets/icons/Карандаш.png" />
                     </div>
                     <div class="cartItem__overview">
                       <p class="overview__title">
@@ -350,7 +350,7 @@
                           <p>OOO Вайлдберриз</p>
                         </div>
                         <div class="overview__wrapperLegalIcon">
-                          <img src="/Assets/icons/i.svg" />
+                          <img src="./Assets/icons/i.svg" />
                         </div>
                       </div>
                     </div>
@@ -441,7 +441,7 @@
                 <p>Отсутствуют · 3 товара</p>
               </div>
               <button class="chooseAbsence__wrapperIcon">
-                <img src="/Assets/icons/icon-20.svg" />
+                <img src="./Assets/icons/icon-20.svg" />
               </button>
             </div>
             <div class="cart__infoLine"></div>
@@ -449,7 +449,7 @@
               <div class="cartItem cartItem__absence">
                 <div class="cartItem__left">
                   <div class="cartItem__image">
-                    <img src="/Assets/icons/Чб1.png" />
+                    <img src="./Assets/icons/Чб1.png" />
                   </div>
                   <div class="cartItem__overview">
                     <p class="overview__title">Футболка UZcotton мужская</p>
@@ -524,7 +524,7 @@
               <div class="cartItem cartItem__absence">
                 <div class="cartItem__left">
                   <div class="cartItem__image">
-                    <img src="/Assets/icons/Чб2.png" />
+                    <img src="./Assets/icons/Чб2.png" />
                   </div>
                   <div class="cartItem__overview">
                     <p class="overview__title">
@@ -600,7 +600,7 @@
               <div class="cartItem cartItem__absence">
                 <div class="cartItem__left">
                   <div class="cartItem__image">
-                    <img src="/Assets/icons/Чб3.png" />
+                    <img src="./Assets/icons/Чб3.png" />
                   </div>
                   <div class="cartItem__overview">
                     <p class="overview__title">
@@ -699,11 +699,11 @@
                           67/1
                         </p>
                         <div class="pointerWrapper">
-                          <img src="/Assets/icons/Stars.svg" />
+                          <img src="./Assets/icons/Stars.svg" />
                           <p1>Пункт выдачи</p1>
                         </div>
                       </div>
-                      <img class="deleteItem" src="/Assets/icons/bucket.svg" />
+                      <img class="deleteItem" src="./Assets/icons/bucket.svg" />
                     </label>
 
                     <label class="modalAdress__radio">
@@ -714,11 +714,11 @@
                           67/1
                         </p>
                         <div class="pointerWrapper">
-                          <img src="/Assets/icons/Stars.svg" />
+                          <img src="./Assets/icons/Stars.svg" />
                           <p1>Пункт выдачи</p1>
                         </div>
                       </div>
-                      <img class="deleteItem" src="/Assets/icons/bucket.svg" />
+                      <img class="deleteItem" src="./Assets/icons/bucket.svg" />
                     </label>
 
                     <label class="modalAdress__radio">
@@ -729,11 +729,11 @@
                           67/1
                         </p>
                         <div class="pointerWrapper">
-                          <img src="/Assets/icons/Stars.svg" />
+                          <img src="./Assets/icons/Stars.svg" />
                           <p1>Пункт выдачи</p1>
                         </div>
                       </div>
-                      <img class="deleteItem" src="/Assets/icons/bucket.svg" />
+                      <img class="deleteItem" src="./Assets/icons/bucket.svg" />
                     </label>
                   </div>
 
@@ -746,7 +746,7 @@
                           67/1
                         </p>
                       </div>
-                      <img class="deleteItem" src="/Assets/icons/bucket.svg" />
+                      <img class="deleteItem" src="./Assets/icons/bucket.svg" />
                     </label>
 
                     <label class="modalAdress__radio">
@@ -757,7 +757,7 @@
                           67/1
                         </p>
                       </div>
-                      <img class="deleteItem" src="/Assets/icons/bucket.svg" />
+                      <img class="deleteItem" src="./Assets/icons/bucket.svg" />
                     </label>
 
                     <label class="modalAdress__radio">
@@ -768,7 +768,7 @@
                           67/1
                         </p>
                       </div>
-                      <img class="deleteItem" src="/Assets/icons/bucket.svg" />
+                      <img class="deleteItem" src="./Assets/icons/bucket.svg" />
                     </label>
                   </div>
 
@@ -789,7 +789,7 @@
                     <div class="infoChanged__addressTime">
                       <div class="addressGrade">
                         <div class="addressGrade__image">
-                          <img src="/Assets/icons/Path (Stroke).svg" />
+                          <img src="./Assets/icons/Path (Stroke).svg" />
                         </div>
                         <p class="addressGrade__counter">4.99</p>
                       </div>
@@ -806,27 +806,27 @@
                   <p1>5—6 февраля</p1>
                   <div class="infoChanged__imagesWrapper">
                     <div class="infoChanged__image">
-                      <img src="/Assets/icons/Bitmap.png" />
+                      <img src="./Assets/icons/Bitmap.png" />
                     </div>
                     <div class="infoChanged__image">
-                      <img src="/Assets/icons/Bitmap (1).png" />
+                      <img src="./Assets/icons/Bitmap (1).png" />
                     </div>
                     <div class="infoChanged__image">
-                      <img src="/Assets/icons/Bitmap (2).png" />
+                      <img src="./Assets/icons/Bitmap (2).png" />
                     </div>
                   </div>
                 </div>
                 <div class="infoChanged__images">
                   <p1>7—8 февраля</p1>
                   <div class="infoChanged__image">
-                    <img src="/Assets/icons/Bitmap (1).png" />
+                    <img src="./Assets/icons/Bitmap (1).png" />
                   </div>
                 </div>
               </div>
             </div>
             <div class="cartDelivery__agree">
               <div class="cartDelivery__agreeIcon">
-                <img src="/Assets/icons/price shipping.svg" />
+                <img src="./Assets/icons/price shipping.svg" />
               </div>
               <div class="cartDelivery__agreeText">
                 <p>
@@ -857,7 +857,7 @@
                   <div class="modal__paymentInfo">
                     <img
                       class="modal__paymentImage"
-                      src="/Assets/icons/Платежные системы.svg"
+                      src="./Assets/icons/Платежные системы.svg"
                     />
                     <p>1234 56•• •••• 1234</p>
                   </div>
@@ -867,7 +867,7 @@
                   <div class="modal__paymentInfo">
                     <img
                       class="modal__paymentImage"
-                      src="/Assets/icons/Платежные системы2.svg"
+                      src="./Assets/icons/Платежные системы2.svg"
                     />
                     <p>1234 56•• •••• 1111</p>
                   </div>
@@ -877,7 +877,7 @@
                   <div class="modal__paymentInfo">
                     <img
                       class="modal__paymentImage"
-                      src="/Assets/icons/Платежные системы3.svg"
+                      src="./Assets/icons/Платежные системы3.svg"
                     />
                     <p>1234 56•• •••• 1222</p>
                   </div>
@@ -887,7 +887,7 @@
                   <div class="modal__paymentInfo">
                     <img
                       class="modal__paymentImage"
-                      src="/Assets/icons/Платежные системы4.svg"
+                      src="./Assets/icons/Платежные системы4.svg"
                     />
                     <p>1234 56•• •••• 1333</p>
                   </div>
@@ -897,7 +897,7 @@
             </div>
             <div class="cartPayment__wrapper">
               <div class="cartPayment__icon">
-                <img src="/Assets/icons/Платежные системы.svg" />
+                <img src="./Assets/icons/Платежные системы.svg" />
               </div>
               <div class="cartPayment__number">
                 <p class="cartPayment__numberCard">1234 56•• •••• 1234</p>
@@ -979,7 +979,7 @@
               <p>Доставка в пункт выдачи</p>
             </div>
             <div id="pointIcon" class="delivery__paragraphIcon">
-              <img class="point__icon" src="/Assets/icons/pen.svg" />
+              <img class="point__icon" src="./Assets/icons/pen.svg" />
             </div>
           </div>
           <div class="delivery__address">
@@ -990,7 +990,7 @@
           </div>
           <div class="delivery__agree">
             <div class="delivery__agreeIcon">
-              <img src="/Assets/icons/price shipping.svg" />
+              <img src="./Assets/icons/price shipping.svg" />
             </div>
             <div class="delivery__agreeText">
               <p>
@@ -1012,12 +1012,12 @@
               <p>Оплата картой</p>
             </div>
             <div id="payIcon" class="delivery__paragraphIcon">
-              <img class="pay__icon" src="/Assets/icons/pen.svg" />
+              <img class="pay__icon" src="./Assets/icons/pen.svg" />
             </div>
           </div>
           <div class="pay__cardWrapper">
             <div class="pay__cardIcon">
-              <img src="/Assets/icons/Платежные системы.svg" />
+              <img src="./Assets/icons/Платежные системы.svg" />
             </div>
             <div class="pay__cardNumber">
               <p>1234 12•• •••• 1234</p>
@@ -1040,7 +1040,7 @@
           <button class="button__order">Заказать</button>
           <div class="button__agreeWrapper">
             <div class="button__agreeIcon">
-              <img src="/Assets/icons/Frame 277132151.svg" />
+              <img src="./Assets/icons/Frame 277132151.svg" />
             </div>
             <div class="button__agreeText">
               <p>
